--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
     }
 
     .search-bar-container {
-      position: relative;
-      width: 100%;
+      position: sticky;
+      top: 60px;
+      z-index: 1000;
+      background-color: #f4f4f9;
     }
 
     .search-bar {
@@ -310,11 +312,12 @@
         }
         return response.arrayBuffer();
       })
-         .then(data => {
+      .then(data => {
         const workbook = XLSX.read(new Uint8Array(data), { type: 'array' });
         const sheetName = workbook.SheetNames[0];
         const sheet = workbook.Sheets[sheetName];
         const json = XLSX.utils.sheet_to_json(sheet);
+        json.sort((a, b) => a['Product Name'].localeCompare(b['Product Name'])); // Sort items alphabetically
         displayItems(json);
       })
       .catch(error => console.error('Error fetching or parsing the Excel file:', error));
@@ -441,4 +444,3 @@
   </script>
 </body>
 </html>
-
